--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Bob-The-Builder
 
 on:
   push:
@@ -21,8 +21,12 @@ jobs:
       with:
         go-version: '1.22.5'
 
-    - name: Build
-      run: go build -v ./...
+        - name: Build Windows
+        run: env GOOS=windows GOARCH=amd64 go build -v -o vrmerge.exe .
 
-    - name: Test
-      run: go test -v ./...
+        - name: Build OSX
+        run: env GOOS=darwin GOARCH=amd64 go build -v -o vrmerge_osx .
+
+        - name: Build Linux
+        run: env GOOS=Linux GOARCH=amd64 go build -v -o vrmerge_linux .
+    
