--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -10,17 +10,16 @@ on:
     branches: [ "main" ]
 
 jobs:
-  generate:
-    name: Generate cross-platform builds
+
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Generate build files
-        uses: thatisuday/go-cross-build@v1
-        with:
-            platforms: 'linux/amd64, darwin/amd64, windows/amd64'
-            package: ''
-            name: 'vrmerge'
-            compress: 'true'
-            dest: 'dist'    
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.22.5'
+
+    - name: Build Windows
+       run: env GOOS=windows GOARCH=amd64 go build -v -o vrmerge.exe .
