--- a/.github/workflows/go_release.yml
+++ b/.github/workflows/go_release.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.22.5'
-      - run: go build -o vrmerge-${{ matrix.goos }}-${{ matrix.goarch }} ./...
+          go-version: '1.22'
+      - run: env GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o vrmerge-${{ matrix.goos }}-${{ matrix.goarch }} ./...
       - uses: actions/upload-artifact@v3
         with:
           name: binaries
